# benchmarks

./: README.md  main.py  pyproject.toml
blazefl-case/: README.md  config.py  main.py  pyproject.toml
blazefl-case/dataset/: dataset.py  functional.py
flower-case/: README.md  pyproject.toml
flower-case/example/: client.py  models.py  server.py  task.py
